# oj-eval-codex-025-20260424130248

./: .gitignore  CMakeLists.txt
src/: main.cpp
